--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://itsmewaqas/github.io/reactapp2",
+  "homepage": "https://itsmewaqas.github.io/reactapp2",
   "name": "reactapp",
   "version": "0.1.0",
   "private": true,
